# LeetSquad

./: .gitignore  .ruff.toml  README.md  main.py  pyproject.toml  requirements.txt  run.sh
aws/: bedrock_client.py  bedrock_test.py
dataset/: LeetCodeDataset_sample_questions_test_cases.csv  LeetCodeDataset_with_complexity.csv  fetch_dataset.ipynb
judge/: llm_judge.py
src/: launcher.py  main.py  run_servers.py  run_test.py  test_server.py
test_cases/: 01-matrix.py  1-bit-and-2-bit-characters.py  132-pattern.py  2-keys-keyboard.py  24-game.py  3sum-closest.py  3sum-smaller.py  3sum-with-multiplicity.py  3sum.py  4-keys-keyboard.py  4sum-ii.py  4sum.py  a-number-after-a-double-reversal.py  abbreviating-the-product-of-a-range.py  account-balance-after-rounded-purchase.py  accounts-merge.py  add-binary.py  add-bold-tag-in-string.py  add-digits.py  add-edges-to-make-degrees-of-all-nodes-even.py  add-minimum-number-of-rungs.py  add-one-row-to-tree.py  add-strings.py  add-to-array-form-of-integer.py  add-two-integers.py  add-two-numbers-ii.py  add-two-numbers.py  adding-spaces-to-a-string.py  adding-two-negabinary-numbers.py  additive-number.py  advantage-shuffle.py  airplane-seat-assignment-probability.py  alert-using-same-key-card-three-or-more-times-in-a-one-hour-period.py  alice-and-bob-playing-flower-game.py  alien-dictionary.py  all-ancestors-of-a-node-in-a-directed-acyclic-graph.py  all-divisions-with-the-highest-score-of-a-binary-array.py  all-elements-in-two-binary-search-trees.py  all-paths-from-source-lead-to-destination.py  all-paths-from-source-to-target.py  (+2602 more)
(+1144 files in other folders)
